--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "discord-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "Main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node Main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "discord.js": "^14.19.3"
+    "discord.js": "^14.19.3",
+    "dotenv": "^16.5.0"
   }
 }
